<resources>
    <string name="app_name">Cuidame</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Email</string>
    <string name="perfil">Perfil</string>
    <string name="chats">Chats</string>
    <string name="pacientes">Mis pacientes</string>
    <string name="logout">Salir</string>
    <string name="editar">Editar cuenta</string>
    <string name="borrar">Borrar cuenta</string>
    <string-array name="trabajos">
        <item>Médico de Familia</item>
        <item>Psiquiatra</item>
        <item>Dermatólogo</item>
        <item>Psicólogo</item>
        <item>Fisioterapeuta</item>
        <item>Cardiólogo</item>
        <item>Pediatra</item>
        <item>Oftalmólogo</item>
    </string-array>
    <string name="especialidad">Especialidad</string>
    <string name="editMensaje">Introduzca el mensaje</string>
</resources>