<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            app:srcCompat="@drawable/ic_outline_account_circle_24" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/especialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especialidad"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <Button
            android:id="@+id/editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <Button
            android:id="@+id/borrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>